# alpasim

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MTGS  README.md  SECURITY.md  alpasim_controller_session_uuid.csv  pyproject.toml  setup_local_env.sh
.agents/skills/: iad-slurm
.cursor/skills/doc-reviewer/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_template.md  config.yml  documentation_request_template.md  feature_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.github/scripts/: changed-files.sh  cleanup-dev-squash.py
.github/workflows/: auto-label-issues.yml  ci.yml  cleanup-dev-squash.yml  lint.yml  pre.yml  privileged-infra-tests.yml  sync-to-gitlab.yml  test.yml
data/: README.md  auto-init.sh  download_vavam_assets.sh
data/rollouts/: README.md
data/scenes/: README.md  sim_scenes.csv  sim_suites.csv
docs/: DATA_PIPELINE.md  DESIGN.md  INTERACTIVE_RUNTIME_MVP.md  INTERACTIVE_WEB_UI.md  MANUAL_DRIVER.md  ONBOARDING.md  OPERATIONS.md  TUTORIAL.md  VIDEO_MODEL.md  run.md
docs/agents/: CODEBASE_MAP.md  RUNNING_LOCALLY.md  RUNTIME_PARALLELISM.md
docs/plans/: 2026-03-31-consolidate-exp-configs.md  2026-03-31-per-service-config-breakdown.md
e2e_challenge/: README.md
e2e_challenge/competitor_cli/: README.md  alpasim_challenge.py
e2e_challenge/starter_kit/: README.md
plugins/mtgs/: pyproject.toml
plugins/mtgs/configs/: __init__.py
plugins/mtgs/configs/deploy/: external_mtgs.yaml
plugins/mtgs/server/: __init__.py  artifact_adapter.py  main.py  servicer.py
plugins/mtgs/server/engine/: __init__.py  base_renderer.py  mtgs.py
plugins/mtgs/server/engine/gaussian_model/: __init__.py  rigid_object.py  rigid_object_mirrored.py  vanilla_gaussian_splatting.py
plugins/mtgs/server/engine/utils/: __init__.py  gaussian_utils.py  geometry_utils.py  portable_utils.py
plugins/mtgs/src/: __init__.py  config.py  service.py
plugins/mtgs/tests/: __init__.py  test_mtgs_plugin.py
plugins/video_model/: README.md  pyproject.toml
plugins/video_model/configs/: __init__.py
plugins/video_model/configs/chunking/: 12frame.yaml  16frame.yaml  8frame.yaml
plugins/video_model/configs/deploy/: external_video_model.yaml
plugins/video_model/data/: auto-init-models.sh
plugins/video_model/src/: __init__.py  config.py  service.py  utils.py
plugins/video_model/src/events/: prefetch.py
plugins/video_model/tests/: test_video_model_integration.py  test_video_model_plugin.py
src/controller/: README.md  pyproject.toml
src/controller/alpasim_controller/: __init__.py  mpc_controller.py  server.py  system.py  system_manager.py  vehicle_model.py
src/controller/benchmark/: README.md  __main__.py  compare.py  runner.py
src/controller/tests/: test_create_system_registry.py  test_server.py  test_system.py  test_vehicle_model.py
src/controller/tools/: plot_controller.py
src/driver/: Dockerfile  pyproject.toml
src/driver/configs/: manual.yaml
src/eval/: README.md  pyproject.toml
src/eval/tests/: test_accumulator.py  test_asl_loader.py  test_data.py  test_driver_response_scorers.py  test_modifiers.py  test_processing.py  test_scenario_evaluator.py  test_video_reasoning_overlay_utils.py
src/grpc/: CHANGELOG.md  README.md  pyproject.toml  tutorial.md
src/mtgs_sensorsim/: README.md  mtgs_sensorsim_server.py  pyproject.toml  run_conda_mtgs_sensorsim.sh
src/mtgs_sensorsim/alpasim_mtgs_sensorsim/: __init__.py  __main__.py  server.py
src/physics/: README.md  pyproject.toml
src/physics/alpasim_physics/: __init__.py  utils.py
src/runtime/: CHANGELOG.md  README.md  pyproject.toml
src/runtime/alpasim_runtime/: __init__.py  autoresume.py  camera_catalog.py  config.py  decision.py  delay_buffer.py  dispatcher.py  endpoints.py  event_loop.py  event_loop_idle_profiler.py  gc_pressure_profiler.py  loop.py  observation_cache.py  route_generator.py  runtime_context.py  scene_cache_monitor.py  scene_loader.py  unbound_rollout.py  validation.py
src/runtime/notebooks/: replay_logs_alpamodel.ipynb
src/runtime/tests/: conftest.py  fixtures.py  test_autoresume.py  test_config.py  test_daemon_engine.py  test_daemon_main.py  test_daemon_request_plumbing.py  test_daemon_scheduler.py  test_decision.py  test_delay_buffer.py  test_event_camera.py  test_event_loop.py  test_event_loop_idle_profiler.py  test_event_parity.py  test_event_policy.py  test_event_step.py  test_gc_pressure_profiler.py  test_interactive_models.py  test_interactive_servicer.py  test_interactive_session_runner.py  test_observation_cache.py  test_runtime_context.py  test_runtime_integration_replay.py  test_scene_cache_monitor.py  test_smoke.py  test_trajdata_integration.py  test_types.py  test_unbound_rollout.py  test_validation.py  test_web_debugger_server.py  test_with_mocks.py  test_worker_ipc.py  test_worker_main.py  test_worker_pool.py
src/tools/: __init__.py  pyproject.toml
src/tools/asl_to_roadcast/: README.md  pyproject.toml
src/tools/asl_to_roadcast/asl_to_roadcast/: __init__.py  config.py
src/tools/asl_to_roadcast/tests/: __init__.py  test_actor.py  test_integration.py
src/trajdata/: .gitignore  CITATION.cff  README.md  README_ALPASIM.md  pyproject.toml
src/utils/: pyproject.toml
src/wizard/: pyproject.toml
(+368 files in other folders)
